@@ -3,7 +3,7 @@
     <parent>
         <artifactId>onebusaway-application-modules</artifactId>
         <groupId>org.onebusaway</groupId>
-        <version>1.1.17-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>onebusaway-federations-webapp</artifactId>
     <packaging>war</packaging>
@@ -12,6 +12,7 @@
 
     <properties>
         <tomcat-version>7.0.70</tomcat-version>
+        <cargo.jvmargs>-Xmx2G -XX:MaxPermSize=256m</cargo.jvmargs>
     </properties>
 
     <dependencies>
@@ -95,6 +96,7 @@
                     <configuration>
                         <home>${project.build.directory}/tomcat7x/container</home>
                         <properties>
+                            <cargo.jvmargs>${cargo.jvmargs}</cargo.jvmargs>
                             <cargo.servlet.port>${org_onebusaway_test_port}</cargo.servlet.port>
                             <cargo.tomcat.ajp.port>${org_onebusaway_test_ajp_port}</cargo.tomcat.ajp.port>
                             <cargo.rmi.port>${org_onebusaway_test_rmi_port}</cargo.rmi.port>
